--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,9 @@ body{
   font-family: 'Merriweather', serif;
 }
 h1{
-  margin-top: 0;
+  color:#66BFBF;
+  font-size:4.75rem;
+  margin: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
 }
 .bottomcloud{
@@ -32,6 +34,18 @@ h1{
   left:200px;
   margin-top: 50px;
 }
+h2{
+  font-weight: normal;
+  color:#66BFBF;
+  margin: 0 auto  50px auto;
+  font-size: 1.5rem;
+  font-family: 'Merriweather', sans-serif;
+}
 h3{
+  color: #11999E;
   font-family: 'Montserrat', sans-serif;
+}
+.skill-row{
+  margin:auto;
+  width:50%;
 }
